# cs496-todo-app

./: .gitignore  Caddyfile  README.md  bootstrap_email_viewer.sh  docker-compose.yml  email_viewer.sh  package-lock.json  package.json  tailwind.config.js
.next/: trace
backend/: .gitignore  Caddyfile  Dockerfile  database.py  docker-compose.yml  email_template.html  go.mod  main.py  pyproject.toml
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/models/: list.py  list_access.py  task.py  user.py
backend/routes/: email_template.html  list.py  middleware.py  task.py  user.py
backend/tests/: test_lists.py
backend/utils/: email.py  token.py
frontend/: .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/list/[id]/: page.tsx
frontend/app/dashboard/list/[uuid]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/postsignup/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/welcome/: welcome.tsx
frontend/components/: ThemeSwitcherButton.tsx  access-panel.tsx  dashboard-header.tsx  dashboard-panel.tsx  lists-overview.tsx  login-page.tsx  pie-chart.tsx  postsignup.tsx  signup-page.tsx  task-list.tsx
frontend/components/ui/: chart.tsx
frontend/contexts/: authcontext.tsx
